# rss_feed_reader

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
config/: rss_feed_reader.rc
headers/abstract_layout_of_rounded_border_of_widget/: abstract_layout_of_rounded_border_of_widget.hpp  layout_of_external_and_internal_rounded_border_of_widget.hpp  layout_of_external_rounded_border_of_widget.hpp  layout_of_internal_rounded_border_of_widget.hpp
headers/changing_size_and_cursor_of_widget/: changing_cursor_of_widget.hpp  changing_size_and_cursor_of_widget.hpp  changing_size_of_widget.hpp  types_aliases_of_changing_size_and_cursor_of_widget.hpp
headers/main_window/: main_window.h  main_window.hpp
headers/painter_of_rounded_border_of_widget/: characteristic_of_placement_of_positional_element.hpp  characteristics_of_placement_of_positional_element.hpp  painter_of_rounded_border_of_widget.hpp  painter_of_save_and_restore.hpp  painter_of_save_and_restore_state.hpp  painter_of_save_and_restore_transform.hpp  roundness_of_rounded_border_of_widget.hpp  shape_of_rounded_border_of_widget.hpp  thickness_of_rounded_border_of_widget.hpp  types_aliases_of_painter_of_rounded_border_of_widget.hpp
headers/types_aliases/: types_aliases.hpp
headers/widget/: abstract_layout_of_rounded_border_of_widget.hpp  central_part_of_widget.hpp  changing_size_of_widget.hpp  cursors_of_widget.hpp  graphics_shadow_effect_of_widget.hpp  layout_of_external_and_internal_rounded_border_of_widget.hpp  layout_of_external_rounded_border_of_widget.hpp  layout_of_internal_rounded_border_of_widget.hpp  layout_of_rounded_border_of_widget.hpp  painter_of_rounded_border_of_widget.hpp  painter_of_save_and_restore.hpp  rounded_border_of_widget.hpp  roundness_of_rounded_border_of_widget.hpp  shape_of_rounded_border_of_widget.hpp  thickness_of_rounded_border_of_widget.hpp  types_aliases_of_widget.hpp  widget.hpp
headers/window_with_rounded_border_and_graphic_effects/: central_part_of_widget.h  central_part_of_window_with_graphic_effects.h  changing_size_of_widget.h  cursors_of_widget.h  layout_of_external_and_internal_rounded_border_of_widget.h  layout_of_external_rounded_border_of_widget.h  layout_of_internal_rounded_border_of_widget.h  layout_of_rounded_border_of_widget.h  layout_of_size_border_of_widget.h  painter_of_rounded_border_of_widget.h  rounded_border_of_widget.h  rounded_border_of_window.h  roundness_of_rounded_border_of_widget.h  shape_of_rounded_border_of_widget.h  thickness_of_rounded_border_of_widget.h  widget.h  window_with_rounded_border_and_graphic_effects.h
rss_feed_reader/: CMakeLists.txt  resources.qrc
rss_feed_reader/config/: rss_feed_reader.rc
rss_feed_reader/forms/: main_window.ui
rss_feed_reader/generated_files/: ui_main_window.h
rss_feed_reader/headers/: border_of_main_window.h  central_part_of_main_window.h  main_window.h  main_window_is_borderless.h  main_window_with_rounded_border.h  rounded_border_for_main_window.h  rounded_border_of_main_window.h
rss_feed_reader/headers/main_window/: central_part_of_window_with_graphic_effect.h  characteristic_of_rounded_border_of_window.h  main_window.h  painter_of_external_rounded_border.h  painter_of_internal_rounded_border.h  painter_of_rounded_border.h  rounded_border_of_window.h  roundness_of_rounded_border_of_window.h  thickness_of_rounded_border_of_window.h  window_with_rounded_border_and_graphic_effect.h
rss_feed_reader/headers/window_with_rounded_border_and_graphic_effects/characteristic_of_rounded_border_of_widget/: roundness_of_rounded_border_of_widget.h
rss_feed_reader/headers/window_with_rounded_border_and_graphic_effects/painter_of_rounded_border_of_widget/: painter_of_rounded_border_of_widget.h
rss_feed_reader/headers/window_with_rounded_border_and_graphic_effects/painter_of_rounded_border_of_widget/layout_of_rounded_border_of_widget/: layout_of_internal_rounded_border_of_widget.h  layout_of_rounded_border_of_widget.h
rss_feed_reader/sources/: border_of_main_window.cpp  central_part_of_main_window.cpp  main.cpp  main_window.cpp  main_window_is_borderless.cpp  main_window_with_rounded_border.cpp  rounded_border_for_main_window.cpp  rounded_border_of_main_window.cpp
rss_feed_reader/sources/main_window/: central_part_of_window_with_graphic_effect.cpp  characteristic_of_rounded_border_of_window.cpp  main.cpp  main_window.cpp  painter_of_external_rounded_border.cpp  painter_of_internal_rounded_border.cpp  painter_of_rounded_border.cpp  rounded_border_of_window.cpp  roundness_of_rounded_border_of_window.cpp  thickness_of_rounded_border_of_window.cpp  window_with_rounded_border_and_graphic_effect.cpp
rss_feed_reader/sources/window_with_rounded_border_and_graphic_effects/characteristic_of_rounded_border_of_widget/: roundness_of_rounded_border_of_widget.cpp  thickness_of_rounded_border_of_widget.cpp
rss_feed_reader/sources/window_with_rounded_border_and_graphic_effects/component_parts_of_window/: rounded_border_of_window.cpp
rss_feed_reader/sources/window_with_rounded_border_and_graphic_effects/painter_of_rounded_border_of_widget/layout_of_rounded_border_of_widget/: layout_of_rounded_border_of_widget.cpp
sources/: main.cpp
sources/abstract_layout_of_rounded_border_of_widget/: abstract_layout_of_rounded_border_of_widget.cpp
sources/changing_size_and_cursor_of_widget/: changing_cursor_of_widget.cpp  changing_size_and_cursor_of_widget.cpp  changing_size_of_widget.cpp
sources/main/: main.cpp
sources/main_window/: main_window.cpp
sources/painter_of_rounded_border_of_widget/: painter_of_rounded_border_of_widget.cpp  shape_of_rounded_border_of_widget.cpp
sources/widget/: abstract_layout_of_rounded_border_of_widget.cpp  central_part_of_widget.cpp  changing_size_of_widget.cpp  cursors_of_widget.cpp  graphics_shadow_effect_of_widget.cpp  layout_of_rounded_border_of_widget.cpp  painter_of_rounded_border_of_widget.cpp  rounded_border_of_widget.cpp  shape_of_rounded_border_of_widget.cpp  widget.cpp
sources/window_with_rounded_border_and_graphic_effects/: central_part_of_widget.cpp  changing_size_of_widget.cpp  (+9 more)
(+10 files in other folders)
